--- a/automation/robb-smarrt-4-ch-remote-ROB_200-024-0.yaml
+++ b/automation/robb-smarrt-4-ch-remote-ROB_200-024-0.yaml
@@ -168,9 +168,9 @@ trigger:
       device_id: !input remote
 action:
   - variables:
-      now: "{{ now() | as_timestamp }}"
-      button: "{{ trigger.event.data.endpoint_id | int }}"
-      cmd: "{{ trigger.event.data.command }}"
+      now: '{{ now() | as_timestamp }}'
+      button: '{{ trigger.event.data.endpoint_id | int }}'
+      cmd: '{{ trigger.event.data.args.attribute_name }}'
       robb_4ch_remote_state: !input robb_4ch_remote_state
       # Load state, fallback to empty
       state: >-
