--- a/automation/robb-smarrt-4-ch-remote-ROB_200-024-0.yaml
+++ b/automation/robb-smarrt-4-ch-remote-ROB_200-024-0.yaml
@@ -171,6 +171,7 @@ action:
       now: '{{ now() | as_timestamp }}'
       button: '{{ trigger.event.data.endpoint_id | int }}'
       cmd: '{{ trigger.event.data.args.attribute_name }}'
+      cmd_value: '{{ trigger.event.data.args.attribute_value | int }}'
       robb_4ch_remote_state: !input robb_4ch_remote_state
       # Load state, fallback to empty
       state: >-
@@ -228,9 +229,9 @@ action:
               - conditions: '{{ mode != "MoveMode.Up" }}'
                 sequence: !input off_button_all_long
       # Regular buttons (only if not in all sequence)
-      - conditions: '{{ not is_double_event and not is_all_command and button == 1 and cmd == "on" }}'
+      - conditions: '{{ not is_double_event and not is_all_command and button == 1 and cmd == "on_off" and cmd_value == 1 }}'
         sequence: !input on_button_1_short
-      - conditions: '{{ not is_double_event and not is_all_command and button == 1 and cmd == "off" }}'
+      - conditions: '{{ not is_double_event and not is_all_command and button == 1 and cmd == "on_off" and cmd_value == 0}}'
         sequence: !input off_button_1_short
       - conditions: '{{ not is_double_event and not is_all_command and button == 1 and (cmd == "move_with_on_off" or cmd == "move") }}'
         sequence:
